handle load button and load match